--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/iconss.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Neuraq Technologies - Neuraq Mentor provides PDFs and videos for all study materials, helping students and professionals learn effectively." />
+  <meta name="keywords"
+    content="Neuraq, Neuraq Technologies, Neuraq Mentor, study materials, PDFs, educational videos, online learning, academic resources, study guides" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
@@ -41,7 +44,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Neuraq Mentor</title>
 </head>
 
 <body>
